--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "whiteboard",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "prettier --write . && node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "prettier": "^3.0.3",
     "socket.io": "^4.7.2"
   }
 }
