--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "whiteboard",
   "main": "server.js",
   "scripts": {
-    "start": "prettier --write . && node server.js"
+    "start": "prettier --write . && node server.js",
+    "postinstall": "npm install simple-color-picker"
   },
   "dependencies": {
     "express": "^4.18.2",
     "prettier": "^3.0.3",
+    "simple-color-picker": "^1.0.5",
     "socket.io": "^4.7.2"
   }
 }
