--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "whiteboard",
   "main": "server.js",
   "scripts": {
-    "start": "prettier --write . && node server.js",
-    "postinstall": "npm install simple-color-picker"
+    "start": "prettier --write . && node server.js"
   },
   "dependencies": {
+    "@simonwep/pickr": "^1.8.2",
     "express": "^4.18.2",
     "prettier": "^3.0.3",
-    "simple-color-picker": "^1.0.5",
     "socket.io": "^4.7.2"
   }
 }
